@@ -347,8 +347,9 @@ fi
 
 echo -e "\nCATALINA_OUT=/dev/stdout\nexport CATALINA_OUT" >> $ALF_HOME/tomcat/bin/setenv.sh
 
-
-sed -i 's/-Xmx1024m/-Xmx'"$TOMCAT_MAX_MEMORY"'/g'  $ALF_HOME/tomcat/scripts/ctl.sh
+# fix ctl.sh see https://hub.alfresco.com/t5/alfresco-content-services-hub/default-memory-allocation-issue-in-alfresco-ce-201707-ga-aka-5-2/ba-p/291330
+# and docker friendly see https://www.adaltas.com/fr/2017/10/28/person-met-java-dans-un-containeur/#m%C3%A9moire
+sed -i 's/-Xms128m -Xmx1024m -XX:+DisableExplicitGC/-XX:+UseCGroupMemoryLimitForHeap -XX:+UnlockExperimentalVMOptions/g'  $ALF_HOME/tomcat/scripts/ctl.sh
 
 tweak_log4j
 
